// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`local fixture test for 1.ignore (success) match snapshot 1`] = `
Array [
  "# ignoregen node",
  "node_modules/",
  "",
  "# ignoregen env",
  ".env*",
  ".envrc",
  "!.env.example",
  "",
]
`;

exports[`local fixture test for 2.ignore (success) match snapshot 1`] = `
Array [
  "dist",
  "",
]
`;

exports[`local fixture test for 3.ignore (success) match snapshot 1`] = `
Array [
  "# ignoregen env",
  ".env*",
  ".envrc",
  "!.env.example",
  "",
  "dist/",
  "",
  "# ignoregen node",
  "node_modules/",
  "",
  ".vscode/",
  "",
]
`;

exports[`local fixture test for not-exist-template.ignore (failed) throw errors array 1`] = `
Array [
  [Error: Failed to fetch template from "https://raw.githubusercontent.com/SnO2WMaN-HQ/ignoregen-template/master/templates/?.ignore" for "# ignoregen ?"],
]
`;
